# staxys

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  STYLE_GUIDELINES.md  post_install
.devcontainer/: Dockerfile  devcontainer.json
config/: staxys.cfg
include/staxys/: common.h
include/staxys/config/: engine_config.h  loader.h  server_config.h  validator.h
include/staxys/core/: config.h  engine.h  logger.h  server_manager.h
include/staxys/error/: error_logger.h  page_handler.h
include/staxys/logging/: access_log.h  error_log.h
include/staxys/network/: request.h  response.h  server.h  uri.h
include/staxys/security/: authentication.h  ssl_manager.h
include/staxys/static_content/: cache.h
include/staxys/utils/: daemon_utils.h  file_utils.h  string_utils.h  uri_utils.h
src/: main.cpp
src/staxys/config/: loader.cpp  validator.cpp
src/staxys/core/: config.cpp  engine.cpp  logger.cpp  server_manager.cpp
src/staxys/error/: error_logger.cpp  page_handler.cpp
src/staxys/logging/: access_log.cpp  error_log.cpp
src/staxys/network/: request.cpp  response.cpp  server.cpp  uri.cpp
src/staxys/security/: authentication.cpp  ssl_manager.cpp
src/staxys/static_content/: cache.cpp
src/staxys/utils/: daemon_utils.cpp  file_utils.cpp  string_utils.cpp  uri_utils.cpp
tests/: CMakeLists.txt  test_network_uri.cpp  test_utils_string_utils.cpp  test_utils_uri_utils.cpp
